# chat-server

./: .env.example  README.md  pyproject.toml
src/: server.py
src/auth/: dependencies.py  oauth.py  routes.py
src/chat/: routes.py
src/db/: database.py  services.py
src/friends/: routes.py
